--- a/public/404.html
+++ b/public/404.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Страница ошибка 404</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -58,10 +60,10 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Запрашиваемая вами страница не существует!</h1>
+      <p>Перейдите на <a href="/">главную страницу</a>, чтоб продолжить работу</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    
   </div>
 </body>
 </html>
